@startuml Class_Part1_MasterData
title Class Diagram — Bagian 1: Master Data & Pengguna
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #DBEAFE
  BorderColor #1D4ED8
  ArrowColor #1E3A8A
}

class User {
  +id: String
  +name: String
  +email: String
  +role: String
  +createdAt: DateTime
}

class Customer {
  +id: String
  +nama: String
  +nomorHp: String
  +deletedAt: DateTime
}

class Supplier {
  +id: String
  +nama: String
  +nomorHp: String
  +email: String
  +isActive: Boolean
}

class Category {
  +id: String
  +nama: String
}

class Unit {
  +id: String
  +nama: String
}

class Product {
  +id: String
  +sku: String
  +nama: String
  +hpp: Decimal
  +hargaJual: Decimal
  +stok: Decimal
  +minStok: Decimal
  +isService: Boolean
  +deletedAt: DateTime
  --
  +checkStock(): Boolean
  +updateStock(): void
}

Product "0..*" --> "1" Category : termasuk dalam
Product "0..*" --> "1" Unit    : menggunakan satuan

@enduml
